--- a/AutoCmdb/templates/host/home.html
+++ b/AutoCmdb/templates/host/home.html
@@ -23,16 +23,17 @@
 
 
 
+
+
 {% block content %}
 
 
-
-
-    <ol class="breadcrumb">
-        <li><a href="#">運維首頁</a></li>
-
-
-    </ol>
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">控制台</h1>
+        </div>
+        <!-- /.col-lg-12 -->
+    </div>
 
     <div class="panel panel-default" style="padding: 20px">
 
@@ -49,8 +50,6 @@
 {% block extra-js %}
 
     <script>
-
-
 
 
     </script>
