--- a/AutoCmdb/templates/login.html
+++ b/AutoCmdb/templates/login.html
@@ -60,7 +60,7 @@
                 <div class="col-sm-6 col-sm-offset-3 m-t-lg">
                     <div class="panel loginBox" style="padding-bottom: 0;">
                         <div class="panel-heading login_head">
-                            <img src="/static/img/IFXMC/pageLogo.jpg" class="pull-left img-responsive login_logo"
+                            <img src="/static/img/IFXMC/pageLogo.png" class="pull-left img-responsive login_logo"
                                  style="max-height:53px;">
                             <span class="loginTitle"><i class="visible-lg-block"></i>用户中心</span>
                         </div>
