--- a/AutoCmdb/templates/asset/home.html
+++ b/AutoCmdb/templates/asset/home.html
@@ -38,7 +38,7 @@
 
     <div class="row">
 
-        <!-- 總資產 -->
+        <!-- 總PC資產 -->
         <div class="col-lg-3 col-md-6">
             <div class="panel panel-primary">
                 <div class="panel-heading">
@@ -52,11 +52,13 @@
                         </div>
                     </div>
                 </div>
-                <a href="#">
+                <a href="{% url 'asset_index' %}?cate_id=5">
                     <div class="panel-footer">
+
                         <span class="pull-left">查看詳情</span>
                         <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
                         <div class="clearfix"></div>
+
                     </div>
                 </a>
             </div>
@@ -76,7 +78,7 @@
                         </div>
                     </div>
                 </div>
-                <a href="#">
+                <a href="{% url 'asset_repair' %}?status=0">
                     <div class="panel-footer">
                         <span class="pull-left">查看詳情</span>
                         <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
