--- a/AutoCmdb/templates/host/repair_detail.html
+++ b/AutoCmdb/templates/host/repair_detail.html
@@ -7,6 +7,8 @@
 
 
     {% url 'host' as host %}
+
+
     {% url 'host_index' as host_index %}
     {% url 'host_repair' as host_repair %}
 
@@ -18,36 +20,48 @@
     {% url 'asset' as asset %}
 
 
+
+
+
     <ul class="nav nav-sidebar">
 
         <ul class="list-group">
 
-            <li class="list-group-item">
-                <a href={{ host }}><i class="fa fa-home"></i> 運維首頁</a>
-            </li>
+            <a href="{{ host }}"
+               class="list-group-item {% if request.path == host %}active{% endif %}">
+                <span>
+                    <i class="fa fa-box"></i> 運維首頁
+                </span>
+            </a>
 
-
-            <!-- 資產管理 -->
-            <li class="list-group-item">
-                <a href="#assetSubmenu" data-toggle="collapse" aria-expanded="false"
-                   class="dropdown-toggle collapsed"><span> <i
-                        class="fa fa-laptop"></i> 主機管理</span><span style="float:right"><i
+            <li class="">
+                <a href="#hostSubmenu" data-toggle="collapse" aria-expanded="false"
+                   class="list-group-item dropdown-toggle collapsed"><span> <i
+                        class="fa fa-box"></i> 主機管理</span><span style="float:right"><i
                         class="fa fa-angle-right"></i></span></a>
 
-                <ul class="list-unstyled collapse" id="assetSubmenu" style="">
-                    <li {% if request.path == host_index %}
-                        class="active"{% endif %}><a href={{ host_index }}> 主機列表</a></li>
-
-                    <li {% if request.path == host_repair %}
-                        class="active"{% endif %}><a href={{ host_repair }}> 電腦維修紀錄表</a></li>
+                <ul class="list-unstyled collapse" id="hostSubmenu" style="">
 
 
-                    <li {% if request.path == asset_input %}class="active"{% endif %}><a
-                            href="{{ host_input }}">匯入</a>
+                    <li class="list-group-item  {% if request.path == host_index %}active{% endif %}">
+                        <a href={{ host_index }}>主機列表</a>
                     </li>
 
-                    <li><a href="{% url 'host_output' %}" target="_blank">匯出</a></li>
+
+                    <li class="list-group-item  {% if host_repair in request.path %}active{% endif %}">
+                        <a href="{{ host_repair }}">電腦維修紀錄表</a>
+                    </li>
+
+                    <li class="list-group-item  {% if request.path == host_input %}active{% endif %}">
+                        <a href="{{ host_input }}">匯入</a>
+                    </li>
+
+                    <li class="list-group-item">
+                        <a href="{% url 'host_output' %}" target="_blank">匯出</a>
+                    </li>
+
                 </ul>
+
             </li>
 
 
@@ -59,15 +73,17 @@
             </a>
 
         </ul>
+
+
     </ul>
-
-
 
 
 {% endblock %}
 
 
-    {% block breadcrumb  %}
+
+
+{% block breadcrumb %}
     <ol class="breadcrumb">
         <li>
             <a href="{% url 'host_repair' %}">電腦維修表</a>
@@ -75,6 +91,6 @@
         <li class="active">{{ asset_repair_obj.asset_obj.name }} {{ asset_repair_obj.title }}</li>
 
     </ol>
-        {% endblock %}
+{% endblock %}
 
 
