--- a/AutoCmdb/templates/asset/base.html
+++ b/AutoCmdb/templates/asset/base.html
@@ -93,7 +93,7 @@
 
 
                         <li class="list-group-item  {% if request.path == asset_repair %}active{% endif %}">
-                            <a href="{{ asset_repair }}">電腦維修紀錄表</a>
+                            <a href="{{ asset_repair }}">資產維修紀錄表</a>
                         </li>
 
 
@@ -150,8 +150,8 @@
                             <a href={{ department }}>部門列表</a>
                         </li>
 
-                        <li class="list-group-item  {% if request.path == category_input %}active{% endif %}">
-                            <a href={{ category_input }}>匯入</a>
+                        <li class="list-group-item  {% if request.path == department_input %}active{% endif %}">
+                            <a href={{ department_input }}>匯入</a>
                         </li>
 
                         <li class="list-group-item">
