--- a/AutoCmdb/templates/base.html
+++ b/AutoCmdb/templates/base.html
@@ -100,7 +100,7 @@
                         <i
                                 class="far fa-user"></i></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">個人中心</a></li>
+                        <li><a href="{% url 'userprofile' %}">個人中心</a></li>
                         <li><a href="{% url 'logout' %}">登出</a></li>
                     </ul>
                 </li>
